[fix] overlapping image on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -430,7 +430,6 @@ small{
     gap: 2rem;
     padding-top: 100px;
     transition: .5s ease;
-    z-index: 9999999;
 }
 
 .navbar-handphone a {
@@ -795,7 +794,6 @@ small{
     right: 0;
     top: 0;
     width: 100%;
-    z-index: 99;
 }
 
 .call-wrapper {
